frontend/src/assets/style.scss
/* ... */
/* Page header */
.page-header {
  .buttons {
    justify-content: flex-end;
  }
}

.page-404 h1 {
  font-size: 100px;
}

/* Dashboard */
section.dashboard {
  .title {
    margin-bottom: 0.5rem;
  }

  .tile.notification {
    @extend .box;
    padding: 10px;
  }

  .counts .column {
    padding: 30px;
  }

  .level-item {
    background-color: $white-bis;
    padding: 30px;
    margin: 10px;

    &:first-child, &:last-child {
      margin: 0;
    }
  }

  label {
    font-weight: bold;
    display: inline-block;
    min-width: 50px;
    text-align: right;
  }

  .charts {
    min-height: 200px;
  }

  .notification {
    border-width: 0;
  }
}

/* Lists page */
section.lists {
  td {
    .tag {
      min-width: 65px;
    }
  }

  .view {
    display: block;
    color: $grey-light;

    &:hover {
      color: $primary;
    }
  }
}

/* List selector */
.list-tags {
  margin-bottom: 1rem;
}

/* Subscribers page */
.subscribers {
  .subscribers-controls .buttons {
    margin-top: 15px;
  }

  .toggle-advanced {
    margin-top: 10px;
  }

  .blocklisted {
    color: red;
  }
}

.b-table.subscriptions {
  overflow-y: scroll;
  max-height: 250px;

  thead th, tbody td {
    padding: 10px;
  }

  td.status .tag {
    width: 100%;
  }
}

.bounces {
  pre {
    padding: 5px 10px;
  }
}

/* Import page */
section.import {
  .delimiter input {
    max-width: 100px;
  }
  .status {
    padding: 60px;
  }
  .log-view .lines {
    max-height: 240px;
    text-align: left;
  }
}

/* Campaigns page */
section.campaigns {
  table tbody {
    .spinner {
      margin-left: 10px;
      .loading-overlay .loading-icon::after {
        border-bottom-color: lighten(#1890ff, 30%);
        border-left-color: lighten(#1890ff, 30%);
      }
    }

    tr.running {
      background: lighten(#1890ff, 43%);
      td {
        border-bottom: 1px solid lighten(#1890ff, 30%);
      }
    }

    td {
      .tags {
        margin-top: 5px;
      }

      &.lists ul {
        // font-size: $size-7;
        list-style-type: circle;
      }

      &.draft {
        color: $grey-lighter;
      }

      .progress-wrapper {
        .progress.is-small {
          height: 0.4em;
        }
        display: inline-block;
      }
    }
  }
}

section.analytics {
  .charts {
    position: relative;
    min-height: 100px;
  }

  .chart {
    margin-bottom: 100px;
    max-width: 100%;
  }

  .donut-container {
    position: relative;
  }
}

.chart canvas {
  height: 400px;
  max-width: 100%;
}

/* Campaign / template preview popup */
.preview {
  padding: 0;

  /* Contain the spinner background in the content area. */
  position: relative;

  #iframe {
    border: 0;
    width: 100%;
    height: 100%;
    min-height: 500px;
    padding: 0;
    margin: 0 0 -5px 0;
  }
}

/* Media gallery */
.media-files {
  img {
    max-width: 140px;
    max-height: 140px;
  }

  .thumb.box {
    background: repeating-conic-gradient(#f0f0f0 0 90deg, #fff 90deg 180deg) 0 0 / 32px 32px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: fit-content;
    height: fit-content;
    text-align: center;
    padding: 0;
    overflow: hidden;
  }
  .ext {
    text-transform: uppercase;
  }
}

/* Template form */
.templates {
  td .tag {
    min-width: 100px;
  }
}
.template-modal {
  .template-modal-content {
    height: 95vh;
    max-height: none;
  }
  .textarea {
    max-height: none;
    height: 55vh;
  }
}

/* Settings */
.settings {
  .disabled {
    opacity: 0.30;
  }
  .box {
    margin-bottom: 30px;
  }
  .html-editor {
    height: auto;
    min-height: 350px;
  }
}

/* Logs */
.log-view {
  .lines {
    height: 70vh;
    overflow-y: scroll;
    font-family: monospace;
    font-size: 0.90rem;

    padding: 15px;
    border: 1px solid $grey-lightest;

    .line {
      display: block;
      margin-bottom: 2px;
    }

    .timestamp {
      color: $primary;
      display: inline-block;
      min-width: 175px;
      margin-right: 5px;
    }

    .line:hover {
      background: $white-bis;
    }
  }
}

/* Users */
section.users {
  td .tag {
    margin: 0 3px;
  }
}
.user-api-token .copy-text {
  background: rgba($green, .1);
  display: block;
  width: 100%;
  border-radius: 3px;
  padding: 15px;
  font-size: 1.2rem;
  color: $green;
}

.permissions-group {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;

  label {
    flex: 1 1 45%;
    max-width: 45%;
    display: flex;
  }
}

th.role-toggle-select a {
  font-weight: normal;
}

/* C3 charting lib */
.c3 {
  .c3-text.c3-empty {
    font-family: $body-family;
    font-size: $size-6;
  }
  .c3-chart-lines .c3-line {
    stroke-width: 2px;
  }
  .c3-axis-x .tick line,
  .c3-axis-y .tick line {
    display: none;
  }
  text {
    fill: $grey;
    font-family: $body-family;
    font-size: 11px;
  }
  .c3-axis path, .c3-axis line {
    stroke: #eee;
  }

  .c3-tooltip {
    @extend .box;
    padding: 10px;
    empty-cells: show;
    opacity: 0.95;

    tr {
      border: 0;
    }
    th {
      background: $white;
    }
  }
}

/* Vue animations */
.slide-enter-active, .slide-leave-active {
  transition: opacity 50ms;
  max-height: none;
}
.slide-enter, .slide-leave-to {
  transition: opacity 50ms;
  opacity: 0;
  max-height: none;
}
.slide-leave-active, .slide-leave-to {
  transition: none;
  display: none;
}


/* Toasts */
.notices {
  .toast {
    @extend .box;
    border-left: 15px solid $grey;
    border-radius: 3px;
    padding: 20px;

    &.is-danger {
      background: $white;
      border-left-color: $red;
      color: $grey-dark;
    }
    &.is-success {
      background: $white;
      border-left-color: $green;
      color: $grey-dark;
    }
  }
}

@media screen and (max-width: 1500px) {
  .b-table {
    .top.level {
      display: block;
    }
  }
  .b-table .level-left {
    display: block;
    width: 100%;
    min-width: 0;
  }
}
/* ... */

